<?xml version="1.0"?>
<package format="3">
  <name>ros2_sinewave_interfaces</name>
  <version>0.0.0</version>
  <description>Custom interfaces for the ros2_sinewave package.</description>
  <maintainer email="ge75puk@mytum.de">linus</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies required for interface generation -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
